# simtrial-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  piecewise_exponential.rs
tests/: piecewise-exponential-fixture.rs  piecewise-exponential.rs
tests/common/: mod.rs
tests/fixtures/: README.md
